--- a/index.html
+++ b/index.html
@@ -2,5 +2,37 @@
 layout: default
 title: Home Page
 ---
-<h1>{{site.title}}</h1>
-{% include callout.html %}
+<svg xmlns="http://w3.org/2000/svg" viewBox="0 0 500 500">
+	<!-- <defs>
+	<filter id="f2" x="-30%" y="-30%" width="200%" height="200%">
+	<feOffset result="offOut" in="SourceAlpha" dx="0" dy="1" />
+	<feComponentTransfer>
+	<feFuncA type="linear" slope="0.2"/>
+	</feComponentTransfer>
+	<feGaussianBlur result="blurOut" in="offOut" stdDeviation="3" />
+	<feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+	</filter>
+	</defs> -->
+	<defs xmlns="http://www.w3.org/2000/svg">
+	<filter id="dropshadow" x="-20%" y="-20%" height="200%" width="200%">
+	<feGaussianBlur in="SourceAlpha" stdDeviation="1"/>
+	<feOffset dx="0" dy="1" result="offsetblur"/>
+	<feComponentTransfer>
+	<feFuncA type="linear" slope="0.3"/>
+	</feComponentTransfer>
+	<feMerge>
+	<feMergeNode/>
+	<feMergeNode in="SourceGraphic"/>
+	</feMerge>
+	</filter>
+	</defs>
+	<rect id="ui-holder" x="150" y="107.6" width="200" height="334.93"/>
+	<circle id="circle" filter="url(#dropshadow)" cx="250" cy="250" r="20"/>
+	<path id="hand"  d="M162,282.19c0-11,7.16-20.62,14.95-28.36,2.46-2.44,5.31-4.92,8.76-5.14s7.18,3.2,5.91,6.42c2.93.85,5.7-1.53,8-3.53s5.73-3.85,8.2-2.05l.67,7.08a91.14,91.14,0,0,1,14.58-5.31l.49,6.25c11.62-.48,19.58-14.71,31.19-14.08a9.36,9.36,0,0,1-1.3,9.63,26.25,26.25,0,0,1-4.8,3.92,30.8,30.8,0,0,0-12.11,21.41,8.08,8.08,0,0,0,6.37-.72c.93,4.22,1.62,9.3-1.52,12.26a12.61,12.61,0,0,1-4.8,2.42L226,295.94a87.34,87.34,0,0,0-11,4.25c-3.22,1.59-6.26,3.58-9.7,4.63a37.53,37.53,0,0,1-9.78,1.17l-32.7,1a155.16,155.16,0,0,1-2.35-27.18"/>
+	<foreignobject class="node" x="150" y="107.6" width="200" height="334.93">
+	
+		<div id="ui">
+			
+		</div>
+	</foreignobject>
+</svg>
