--- a/index.html
+++ b/index.html
@@ -15,24 +15,30 @@ title: Home Page
 	</defs> -->
 	<defs xmlns="http://www.w3.org/2000/svg">
 	<filter id="dropshadow" x="-20%" y="-20%" height="200%" width="200%">
-	<feGaussianBlur in="SourceAlpha" stdDeviation="1"/>
+	<feGaussianBlur in="SourceAlpha" stdDeviation="5"/>
 	<feOffset dx="0" dy="1" result="offsetblur"/>
 	<feComponentTransfer>
-	<feFuncA type="linear" slope="0.3"/>
+	<feFuncA type="linear" slope="0.2"/>
 	</feComponentTransfer>
 	<feMerge>
 	<feMergeNode/>
 	<feMergeNode in="SourceGraphic"/>
 	</feMerge>
 	</filter>
+
+	<style>.cls-1{fill:#fff;stroke:#e6e6e6;}.cls-1,.cls-2,.cls-4{stroke-miterlimit:10;}.cls-2{fill:#f1f1f2;stroke-width:1.5px;}.cls-2,.cls-4{stroke:#dbdbdb;}.cls-3{fill:#c3cbd5;}.cls-4{fill:#e5e5e5;stroke-width:2px;}.cls-5{fill:aqua;}.cls-6{fill:#f2f2f2;}.cls-7{fill:#efcaa4;}.cls-10,.cls-7,.cls-8,.cls-9{fill-rule:evenodd;}.cls-8{fill:#d1ad88;}.cls-9{fill:#fae2cb;}.cls-10{fill:#ebc2ae;}</style>
 	</defs>
-	<rect id="ui-holder" x="150" y="107.6" width="200" height="334.93"/>
-	<circle id="circle" filter="url(#dropshadow)" cx="250" cy="250" r="20"/>
-	<path id="hand"  d="M162,282.19c0-11,7.16-20.62,14.95-28.36,2.46-2.44,5.31-4.92,8.76-5.14s7.18,3.2,5.91,6.42c2.93.85,5.7-1.53,8-3.53s5.73-3.85,8.2-2.05l.67,7.08a91.14,91.14,0,0,1,14.58-5.31l.49,6.25c11.62-.48,19.58-14.71,31.19-14.08a9.36,9.36,0,0,1-1.3,9.63,26.25,26.25,0,0,1-4.8,3.92,30.8,30.8,0,0,0-12.11,21.41,8.08,8.08,0,0,0,6.37-.72c.93,4.22,1.62,9.3-1.52,12.26a12.61,12.61,0,0,1-4.8,2.42L226,295.94a87.34,87.34,0,0,0-11,4.25c-3.22,1.59-6.26,3.58-9.7,4.63a37.53,37.53,0,0,1-9.78,1.17l-32.7,1a155.16,155.16,0,0,1-2.35-27.18"/>
+	<!-- <rect id="ui-holder" x="150" y="107.6" width="200" height="334.93"/> -->
+	<g id="phone" filter="url(#dropshadow)"><path class="cls-1" d="M365.35,133.86h-3.61l0-64.71a31.82,31.82,0,0,0-31.82-31.83l-162.13,0A31.82,31.82,0,0,0,136,69.09V90.54h-3.33v20.29H136v23h-3.24v35.93H136v8.42h-3.15v35.93h3.15l-.06,266.79A31.82,31.82,0,0,0,167.7,512.7l162.13,0a31.82,31.82,0,0,0,31.83-31.81l.07-311.14h3.61Z"/><circle class="cls-2" cx="210.55" cy="62.89" r="4.06"/><circle id="home" class="cls-3" cx="248.22" cy="485.77" r="18.47"/><rect class="cls-4" x="229.69" y="61.16" width="36.81" height="3.68" rx="1.82" ry="1.82"/></g>
 	<foreignobject class="node" x="150" y="107.6" width="200" height="334.93">
 	
 		<div id="ui">
-			
+			<div class="tab">I'm html</div>
+			<div class="tab">inside svg</div>
+			<div class="tab">pretty cool, huh?</div>
 		</div>
 	</foreignobject>
+	<!-- <circle id="circle"  cx="250" cy="250" r="20"/> -->
+	<!-- <path id="hand"  d="M162,282.19c0-11,7.16-20.62,14.95-28.36,2.46-2.44,5.31-4.92,8.76-5.14s7.18,3.2,5.91,6.42c2.93.85,5.7-1.53,8-3.53s5.73-3.85,8.2-2.05l.67,7.08a91.14,91.14,0,0,1,14.58-5.31l.49,6.25c11.62-.48,19.58-14.71,31.19-14.08a9.36,9.36,0,0,1-1.3,9.63,26.25,26.25,0,0,1-4.8,3.92,30.8,30.8,0,0,0-12.11,21.41,8.08,8.08,0,0,0,6.37-.72c.93,4.22,1.62,9.3-1.52,12.26a12.61,12.61,0,0,1-4.8,2.42L226,295.94a87.34,87.34,0,0,0-11,4.25c-3.22,1.59-6.26,3.58-9.7,4.63a37.53,37.53,0,0,1-9.78,1.17l-32.7,1a155.16,155.16,0,0,1-2.35-27.18"/> -->
+	<g id="hand"><path class="cls-7" d="M488.83,502.92c-3.91-7.86-8.2-16.25-12.32-24.57-10.23-20.66-14.23-70.29-17.34-97.56S447.6,331.22,436.1,317s-23.77-35.59-36.35-29.87S387,298,387,298s-16.27-24.66-30.82-21.42-16,13.16-16,13.16-8.2-19.89-23.77-17-16.52,10-16.52,10S277.47,239,269.27,219.09,255.61,189,246.59,191.45s-19.7,12.33-9,37.81,21.92,66.8,29.48,85.29,22.62,57.2,26.24,80,5.39,22.86-1.4,19.19-5.71-19.22-11-25.26-4.77-22.41-2.1-29.53-7.88-28.47-15.7-30.83-10.11,3.75-11.82,22.24-19.58,27.45-13.29,43.15,17,41.18,20.46,50.59,23.64,29.74,44.55,40.49S362,516,375,537.13c2.8,4.56,7.3,12.68,12.69,22.79Z"/><path class="cls-8" d="M299.9,282.78c3.43,6.59,16.35,38.59,20.3,48.2s13.19,11.11,7.27,5.25S311.5,301.95,299.9,282.78Z"/><path class="cls-8" d="M340.2,289.77c3.76,9.23,15.27,34.55,24.5,40.53s5.07-.91-3.25-10.74S349.85,304.1,340.2,289.77Z"/><path class="cls-8" d="M387,298c4.88,11.37,15.71,32.52,27.59,34.45s.18-5-4.66-8.47S398,314,387,298Z"/><path class="cls-9" d="M244.33,191.31c-4.43,1.7-9.78,5.2-7.25,11.37s8.57,14.27,15,12.37,7.76-8.32,4.11-16S249.79,189.21,244.33,191.31Z"/><path class="cls-10" d="M257.27,328.6c-3.22,2.39-4.65,9.23-5.81,21.74l0,.25c5.13-2,6.59-7.51,7.52-12S259.44,330.65,257.27,328.6Z"/><path class="cls-8" d="M270.16,301.44a34.18,34.18,0,0,0,21.9-7.77c-7.14,2.77-15,6-21.9,7.77Zm17.17-21.11c-5.25-1.18-17.24,4.2-21.38,11.15C271.8,287.23,283.34,281.13,287.32,280.32Z"/><path class="cls-8" d="M264.6,375.14c7.14-4,10.48-.41,12.94,4.9-3.37-2.73-6.24-6.64-12.94-4.9Zm24.28,51.65c4.06-3.45,5.58-4.51,5.52-11.72C291.82,422.18,291.19,423.27,288.87,426.79Z"/></g>
 </svg>
