--- a/index.html
+++ b/index.html
@@ -2,17 +2,8 @@
 layout: default
 title: Home Page
 ---
-<svg xmlns="http://w3.org/2000/svg" viewBox="0 0 500 500">
-	<!-- <defs>
-	<filter id="f2" x="-30%" y="-30%" width="200%" height="200%">
-	<feOffset result="offOut" in="SourceAlpha" dx="0" dy="1" />
-	<feComponentTransfer>
-	<feFuncA type="linear" slope="0.2"/>
-	</feComponentTransfer>
-	<feGaussianBlur result="blurOut" in="offOut" stdDeviation="3" />
-	<feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
-	</filter>
-	</defs> -->
+<!-- <svg xmlns="http://w3.org/2000/svg" viewBox="0 0 500 500">
+
 	<defs xmlns="http://www.w3.org/2000/svg">
 	<filter id="dropshadow" x="-20%" y="-20%" height="200%" width="200%">
 	<feGaussianBlur in="SourceAlpha" stdDeviation="5"/>
@@ -28,7 +19,6 @@ title: Home Page
 
 	<style>.cls-1{fill:#fff;stroke:#e6e6e6;}.cls-1,.cls-2,.cls-4{stroke-miterlimit:10;}.cls-2{fill:#f1f1f2;stroke-width:1.5px;}.cls-2,.cls-4{stroke:#dbdbdb;}.cls-3{fill:#c3cbd5;}.cls-4{fill:#e5e5e5;stroke-width:2px;}.cls-5{fill:aqua;}.cls-6{fill:#f2f2f2;}.cls-7{fill:#efcaa4;}.cls-10,.cls-7,.cls-8,.cls-9{fill-rule:evenodd;}.cls-8{fill:#d1ad88;}.cls-9{fill:#fae2cb;}.cls-10{fill:#ebc2ae;}</style>
 	</defs>
-	<!-- <rect id="ui-holder" x="150" y="107.6" width="200" height="334.93"/> -->
 	<g id="phone" filter="url(#dropshadow)"><path class="cls-1" d="M365.35,133.86h-3.61l0-64.71a31.82,31.82,0,0,0-31.82-31.83l-162.13,0A31.82,31.82,0,0,0,136,69.09V90.54h-3.33v20.29H136v23h-3.24v35.93H136v8.42h-3.15v35.93h3.15l-.06,266.79A31.82,31.82,0,0,0,167.7,512.7l162.13,0a31.82,31.82,0,0,0,31.83-31.81l.07-311.14h3.61Z"/><circle class="cls-2" cx="210.55" cy="62.89" r="4.06"/><circle id="home" class="cls-3" cx="248.22" cy="485.77" r="18.47"/><rect class="cls-4" x="229.69" y="61.16" width="36.81" height="3.68" rx="1.82" ry="1.82"/></g>
 	<foreignobject class="node" x="150" y="107.6" width="200" height="334.93">
 	
@@ -38,7 +28,46 @@ title: Home Page
 			<div class="tab">pretty cool, huh?</div>
 		</div>
 	</foreignobject>
-	<!-- <circle id="circle"  cx="250" cy="250" r="20"/> -->
-	<!-- <path id="hand"  d="M162,282.19c0-11,7.16-20.62,14.95-28.36,2.46-2.44,5.31-4.92,8.76-5.14s7.18,3.2,5.91,6.42c2.93.85,5.7-1.53,8-3.53s5.73-3.85,8.2-2.05l.67,7.08a91.14,91.14,0,0,1,14.58-5.31l.49,6.25c11.62-.48,19.58-14.71,31.19-14.08a9.36,9.36,0,0,1-1.3,9.63,26.25,26.25,0,0,1-4.8,3.92,30.8,30.8,0,0,0-12.11,21.41,8.08,8.08,0,0,0,6.37-.72c.93,4.22,1.62,9.3-1.52,12.26a12.61,12.61,0,0,1-4.8,2.42L226,295.94a87.34,87.34,0,0,0-11,4.25c-3.22,1.59-6.26,3.58-9.7,4.63a37.53,37.53,0,0,1-9.78,1.17l-32.7,1a155.16,155.16,0,0,1-2.35-27.18"/> -->
+	
 	<g id="hand"><path class="cls-7" d="M488.83,502.92c-3.91-7.86-8.2-16.25-12.32-24.57-10.23-20.66-14.23-70.29-17.34-97.56S447.6,331.22,436.1,317s-23.77-35.59-36.35-29.87S387,298,387,298s-16.27-24.66-30.82-21.42-16,13.16-16,13.16-8.2-19.89-23.77-17-16.52,10-16.52,10S277.47,239,269.27,219.09,255.61,189,246.59,191.45s-19.7,12.33-9,37.81,21.92,66.8,29.48,85.29,22.62,57.2,26.24,80,5.39,22.86-1.4,19.19-5.71-19.22-11-25.26-4.77-22.41-2.1-29.53-7.88-28.47-15.7-30.83-10.11,3.75-11.82,22.24-19.58,27.45-13.29,43.15,17,41.18,20.46,50.59,23.64,29.74,44.55,40.49S362,516,375,537.13c2.8,4.56,7.3,12.68,12.69,22.79Z"/><path class="cls-8" d="M299.9,282.78c3.43,6.59,16.35,38.59,20.3,48.2s13.19,11.11,7.27,5.25S311.5,301.95,299.9,282.78Z"/><path class="cls-8" d="M340.2,289.77c3.76,9.23,15.27,34.55,24.5,40.53s5.07-.91-3.25-10.74S349.85,304.1,340.2,289.77Z"/><path class="cls-8" d="M387,298c4.88,11.37,15.71,32.52,27.59,34.45s.18-5-4.66-8.47S398,314,387,298Z"/><path class="cls-9" d="M244.33,191.31c-4.43,1.7-9.78,5.2-7.25,11.37s8.57,14.27,15,12.37,7.76-8.32,4.11-16S249.79,189.21,244.33,191.31Z"/><path class="cls-10" d="M257.27,328.6c-3.22,2.39-4.65,9.23-5.81,21.74l0,.25c5.13-2,6.59-7.51,7.52-12S259.44,330.65,257.27,328.6Z"/><path class="cls-8" d="M270.16,301.44a34.18,34.18,0,0,0,21.9-7.77c-7.14,2.77-15,6-21.9,7.77Zm17.17-21.11c-5.25-1.18-17.24,4.2-21.38,11.15C271.8,287.23,283.34,281.13,287.32,280.32Z"/><path class="cls-8" d="M264.6,375.14c7.14-4,10.48-.41,12.94,4.9-3.37-2.73-6.24-6.64-12.94-4.9Zm24.28,51.65c4.06-3.45,5.58-4.51,5.52-11.72C291.82,422.18,291.19,423.27,288.87,426.79Z"/></g>
-</svg>
+</svg> -->
+
+
+<svg id="illustration" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 800">
+<defs>
+	<filter id="dropshadow" x="-20%" y="-20%" height="200%" width="200%">
+	<feGaussianBlur in="SourceAlpha" stdDeviation="5"/>
+	<feOffset dx="0" dy="1" result="offsetblur"/>
+	<feComponentTransfer>
+	<feFuncA type="linear" slope="0.2"/>
+	</feComponentTransfer>
+	<feMerge>
+	<feMergeNode/>
+	<feMergeNode in="SourceGraphic"/>
+	</feMerge>
+	</filter>
+<style>.cls-1{fill:#f0bc8c;}.cls-2{fill:#f7cca9;}.cls-3{fill:#d6a983;}.cls-4{fill:#fff;}.cls-4,.cls-5{stroke:#c3cbd5;stroke-miterlimit:10;}.cls-5{fill:#f1f1f2;}.cls-6{fill:#f2f2f2;}
+</style>
+</defs>
+
+
+<title>handsphone</title>
+
+<g id="hand-underlay">
+<path id="armthumb" class="cls-1" d="M237,269c11,65.88-9.14,138.48,13,202L75,838l194,7L388,541c35-15,90.25-50.44,106-74L329,369.58c-37-11.58-45-49.58-48-84.39-3.06-27.19-14.33-34.74-20.6-38.3-7.32-4.15-17.46-.89-21.68,2.68C237.8,250,237,263,237,269Z"/><path id="thumbnail" class="cls-2" d="M236,250a198.65,198.65,0,0,0,3,33s5-2,5-6-3-27-3-27A4,4,0,0,0,236,250Z"/><path id="indexfinger" class="cls-1" d="M487.5,238.5a22,22,0,0,1-15.56-37.56l50.5-50.5a22,22,0,0,1,31.11,31.11l-50.5,50.5A21.93,21.93,0,0,1,487.5,238.5Z"/><path id="shadow" class="cls-3" d="M284.89,456.38C286,470,298,482,312.38,484.93a52.1,52.1,0,0,0,8.5,1.38c2.63.49,5.27.89,7.87,1.24,5.2.69,10.24,1.15,14.73,1.58q4.81.6,9.63,1c19.13,1.74,37.95.28,56.88-1l9.47-.63c2.44-.06,4.89-.08,7.35-.07s4.92,0,7.38,0C455,486,489,492,492,467c0-3-10-7-16.39-11.27a76.32,76.32,0,0,0-9.18-5l-10.76-6.34L327,368.38,317.89,363c-1.65-1.17-3.35-2.25-5.08-3.28C304,354,295,351,287,344c-1,14-4,28-4.17,41.8-.14,2.25-.25,4.52-.36,6.79-.31,6.81-.53,13.65-.61,20.5q-.05,4.11,0,8.23C282,430,281,439,283.94,447.8,284.57,453.23,284.89,456.38,284.89,456.38Z"/></g><g id="phone"><rect id="outline" class="cls-4" x="286.93" y="7.29" width="225.78" height="475.43" rx="31.82" ry="31.82"/><circle id="home-btn" class="cls-5" cx="399.22" cy="455.77" r="18.47"/><rect id="speaker" class="cls-5" x="380.69" y="31.16" width="36.81" height="3.68" rx="1.82" ry="1.82"/>
+
+<rect id="UI-holder" class="cls-6" x="300" y="77.6" width="200" height="334.93"/>
+
+<foreignobject class="node" x="300" y="77.6" width="200" height="334.93">
+	
+		<div id="ui">
+			<div class="tab">I'm html</div>
+			<div class="tab">inside svg</div>
+			<div class="tab">pretty cool, huh?</div>
+		</div>
+	</foreignobject>
+
+
+
+</g><g id="hand-overlay"><path class="cls-1" d="M509,291a22,22,0,0,1-15.56-37.56l29-29a22,22,0,0,1,31.11,31.11l-29,29A21.93,21.93,0,0,1,509,291Z"/><path class="cls-1" d="M509,360a22,22,0,0,1-15.56-37.56l24-24a22,22,0,0,1,31.11,31.11l-24,24A21.93,21.93,0,0,1,509,360Z"/><path class="cls-1" d="M509,427a22,22,0,0,1-15.56-37.56l19.5-19.5a22,22,0,0,1,31.11,31.11l-19.5,19.5A21.93,21.93,0,0,1,509,427Z"/><path class="cls-2" d="M521,271c5.22,7.13-7.16,16-16,16a16,16,0,0,1-16-16c0-8.84,8.24-20.23,16-16C509.05,257.21,516.17,264.39,521,271Z"/><path class="cls-2" d="M522,341c5.22,7.13-7.16,16-16,16a16,16,0,0,1-16-16c0-8.84,8.24-20.23,16-16C510.05,327.21,517.17,334.39,522,341Z"/><path class="cls-2" d="M522,407c5.22,7.13-7.16,16-16,16a16,16,0,0,1-16-16c0-8.84,8.24-20.23,16-16C510.05,393.21,517.17,400.39,522,407Z"/></g>
+<g id="point-hand"><path class="cls-1" d="M388.87,138a22,22,0,0,0-10.1,29.43c-5.76-1.32,103.61,227.65,108.73,240,4.2,10.17-47.25.2-74.07-9.7-25.92-8.76-37.54-1.75-43.42,2.42-6.86,4.87-8.21,15.43-6.77,20.77,0,1.06,149.25,82.5,227.25,71.5.1.11,196.26,366.28,196.26,366.28L875.34,686,690.49,409.39a183.07,183.07,0,0,0-2.14-20.82c-4.76-49.17-25.64-91.28-52.24-132.46q-3.32-5.15-6.76-10.28C618,230,606,203,583,212a16.79,16.79,0,0,0-9,8.16,22.1,22.1,0,0,0-2.76,12.45l-2.64-5.39A22,22,0,0,0,527,239.29a22,22,0,0,0-39.78,16.26c.75,9.12-4.71,12-6.71,9s-62.2-116.37-62.2-116.37A22,22,0,0,0,388.87,138Z"/><path class="cls-2" d="M392.68,171.12c-8.35,2.9-13.2-11.53-10.62-20a16,16,0,0,1,20-10.62c8.45,2.59,16.93,13.8,10.62,20C409.37,163.73,400.41,168.43,392.68,171.12Z"/><path id="thumbnail-2" data-name="thumbnail" class="cls-2" d="M365.35,421.67a198.65,198.65,0,0,0,29.31,15.46s1-5.28-2.31-7.46-24.28-12.19-24.28-12.19A4,4,0,0,0,365.35,421.67Z"/></g></svg>
